crates/rome_formatter/tests/specs/prettier/decorators-export/before_export.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: before_export.js

---
# Input
```js
@decorator
export class Foo {}

@decorator
export default class {}

```

# Output
```js
@decorator
export class Foo {}



@decorator
export default class {}

```

# Errors
```
error[SyntaxError]: expected a statement but instead found '@decorator'
  ┌─ before_export.js:1:1
  │
1 │ @decorator
  │ ^^^^^^^^^^ Expected a statement here

error[SyntaxError]: expected a statement but instead found '@decorator'
  ┌─ before_export.js:4:1
  │
4 │ @decorator
  │ ^^^^^^^^^^ Expected a statement here


```


